tests/src/frontend/typechecking/invalid/superfluous_return1.sk
fun main(): void {
  return void;
}
